# atfile

./: .gitignore  Cargo.toml  README.md  extension.toml
.github/workflows/: ci.yml  release.yml
crates/atfile-lsp/: Cargo.toml
crates/atfile-lsp/src/: bin.rs  lib.rs
crates/atfile-zed/: Cargo.toml
crates/atfile-zed/src/: installation.rs  lib.rs
docs/superpowers/plans/: 2026-05-12-pinned-lsp-binary-download.md
docs/superpowers/specs/: 2026-05-12-pinned-lsp-binary-download-design.md
