[package]
name = "atfile-zed"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/inmzhang/atfile"
publish = false

[lib]
path = "crates/atfile-zed/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api.workspace = true

[workspace]
members = ["crates/atfile-lsp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/inmzhang/atfile"
publish = false

[workspace.dependencies]
anyhow = "1.0"
globset = "0.4"
ignore = "0.4"
lsp-server = "0.7"
lsp-types = "0.97.0"
nucleo-matcher = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
url = "2.5"
zed_extension_api = "0.7.0"
