[package]
name = "atfile-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
globset.workspace = true
ignore.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
nucleo-matcher.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "atfile-lsp"
path = "src/bin.rs"
